--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Webpage</title>
+    <link rel="icon" href="logo.png" type="my_logo">
     <link rel="stylesheet" href="styles.css">
 </head>
 
